# pak-pacul

./: CLAUDE.md  Cargo.toml  Context.md  TODO.md  improvement.md  prompt.md
benches/: sequential_scan.rs
benches/utils/: benchmark_helpers.rs  data_generator.rs  metrics_collector.rs  mod.rs  test_scenarios.rs
src/: lib.rs  main.rs
src/art/: mod.rs
src/executor/: create_table.rs  insert.rs  mod.rs  predicate.rs  scan.rs  sequential_scan.rs
src/optimizer/: CLAUDE.md
src/planner/: error.rs  expression.rs  logical_plan.rs  mod.rs  parser.rs  types.rs
src/storage/: bplus_tree.rs  header.rs  mod.rs  schema.rs  storage_manager.rs
src/types/: entry.rs  error.rs  mod.rs  page.rs  row.rs  value.rs
src/utils/: hash.rs  mock.rs  mod.rs
tests/: mod.rs
tests/executor/: create_table_test.rs  insert_test.rs  mod.rs  scan_test.rs
tests/storage/: bplus_tree_test.rs  mod.rs  storage_manager_test.rs
tests/types/: mod.rs  page_test.rs  row_test.rs  value_test.rs
