[package]
name = "bambang"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
chrono = "0.4.41"
crc32fast = "1.5.0"
rustyline = { version = "16.0.0", features = ["with-file-history"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlparser = "0.54.0"
tempfile = "3.20.0"
thiserror = "2.0.12"

[dev-dependencies]
criterion = {version = "0.7.0", features = ["html_reports"]}
memory-stats = "1.2.0"
sysinfo = "0.36.1"

[[bench]]
name = "sequential_scan"
harness = false